# BasinGraph

./: .gitignore  .zenodo.json  AUTHORS.md  CITATION.cff  CODE_AVAILABILITY_TEMPLATE.md  CONTRIBUTING.md  DATA_AVAILABILITY_TEMPLATE.md  LICENSE  LICENSE_PENDING.md  MANIFEST_SHA256.csv  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v3.0.0.md  pyproject.toml
analysis_v2/: analyze_coco_v2_development_diagnostics.py  compare_rc1_rc2_development.py  validate_coco_rc1_holdout.py  validate_coco_rc2_development.py  validate_coco_v2_development.py  validate_coco_v2_mini.py  validate_cutest_rc1_holdout.py  validate_cutest_v2_mini.py  validate_v2_ablation_mini.py
basingraph/: optimizer.py
basingraph_v2/: __init__.py  archive.py  diagnostics.py  directions.py  evaluation.py  graph.py  line_search.py  optimizer.py  probes.py  types.py
data/: README.md
environments/: cutest_stack_versions.txt
experiments/: run_coco.py
experiments_v2/: run_coco_rc1_holdout_algorithm.py  run_coco_rc2_development.py  run_coco_v2_development.py  run_coco_v2_mini.py  run_cutest_rc1_holdout_batch.py  run_cutest_v2_mini.py  run_v2_ablation_mini.py  run_v2_official_smoke.py
protocols/: CUTEST_PRE_REGISTRATION_MANIFEST_v2.csv  CUTEST_PRE_REGISTRATION_PROTOCOL_v2.md  CUTEST_PRE_REGISTRATION_SUMMARY_v2.json  CUTEST_PROTOCOL_AMENDMENT_v1_to_v1_1.md  CUTEST_TECHNICAL_INVENTORY_AUDIT_v2.md  CUTEST_TECHNICAL_INVENTORY_SUMMARY_v2.json  STEP14_DOWNLOADED_ARTIFACTS_SHA256.csv  cutest_candidate_pool_v1.csv  cutest_env.sh  cutest_fixed_valid_inventory_v2.csv  (+8 more)
(+246 files in other folders)
